--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -91,6 +91,7 @@
     "no-trailing-spaces": 0,
     "padded-blocks": 0,
     "arrow-parens": 0,
+    "no-use-before-define": [2, { "functions": true, "classes": true }],
     "prefer-arrow-callback": 2,
     "no-param-reassign": [
       2,
@@ -99,7 +100,6 @@
       }
     ],
     "linebreak-style": 0,
-    "no-use-before-define": 0,
     "class-methods-use-this": 0
   }
 }
