--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 EXPRESS_PORT=8000
 DB_PATH = '.database/subscriptions.db'
 MAILTO='mailto:me@mysite.com'
-PUBLIC_KEY="YOUR_PUBLIC_KEY"
-PRIVATE_KEY="YOUR_PRIVATE_KEY"
+PUBLIC_KEY="BPB3wdNSAqqKC7tfAQCM2QGPNKD8_MLwEDuq72NE1-V7Z6uQCKs5Bp02cjoiKE-f-wKGuEtmmOWV7NRId5k-igg"
+PRIVATE_KEY="tG8VcMtgjmDdk_Ua3eC1vGwbA80dByOcWJk5cqf2EAo"
 NOTIFICATION_ICON="https://pablomagaz.com/assets/images/icons/logo512.png"
