--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "esm": "3.2.22",
     "express": "4.16.4",
     "husky": "1.3.1",
-    "nedb": "1.8.0",
+    "nedb": "^1.8.0",
     "web-push": "3.3.3"
   },
   "devDependencies": {
